force-app/main/default/objects/Cpm_Component_Package_Dependency__c/Cpm_Component_Package_Dependency__c.object-meta.xml
<CustomObject>
    <label>Component Package Dependency</label>
    <nameField>
        <displayFormat>GPBUMPD-{0000}</displayFormat>
        <label>Component Package Dependency Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Package Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>