force-app/main/default/objects/Cpm_Component_Package_Dependency__c/fields/Cpm_Component_Package__c.field-meta.xml
<CustomField>
    <fullName>Cpm_Component_Package__c</fullName>
    <label>Component Package</label>
    <referenceTo>Cpm_Component_Package__c</referenceTo>
    <relationshipLabel>Component Package Dependencies</relationshipLabel>
    <relationshipName>Component_Package_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>