force-app/main/default/objects/Cpm_Component_Package_Dependency__c/fields/Dependent_Component_Package__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Component_Package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dependent Component Package</label>
    <referenceTo>Cpm_Component_Package__c</referenceTo>
    <relationshipLabel>Component Packages Depending on This</relationshipLabel>
    <relationshipName>Component_Packages_Depending_On</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>